[gd_scene load_steps=24 format=2]

[ext_resource path="res://src/Effects/Explosion Particles.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/Effects/Remains Particle.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/Sounds/56 - MMX - Enemy Death.wav" type="AudioStream" id=4]
[ext_resource path="res://src/Actors/Enemies/LaserLine/laser_line2.png" type="Texture" id=5]
[ext_resource path="res://src/Actors/Enemies/LaserLine/Laser.gd" type="Script" id=6]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDamage.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Modules/Enemy/EnemyDeath.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Modules/Enemy/DamageOnTouch.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Enemies/LaserLine/LaserLine.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Enemies/LaserLine/laser_base.res" type="SpriteFrames" id=12]
[ext_resource path="res://src/Sounds/HIT.wav" type="AudioStream" id=13]
[ext_resource path="res://src/Actors/Enemies/LaserLine/laser_line.res" type="SpriteFrames" id=15]
[ext_resource path="res://src/Actors/Enemies/LaserLine/AnimateChildren.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Enemies/LaserLine/laser_line1.png" type="Texture" id=17]
[ext_resource path="res://src/Actors/Enemies/LaserLine/laser_line3.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=79]
extents = Vector2( 8.5, 8 )

[sub_resource type="RectangleShape2D" id=80]
extents = Vector2( 0.5, 2 )

[sub_resource type="Curve" id=238]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=239]
curve = SubResource( 238 )

[sub_resource type="ParticlesMaterial" id=244]
resource_local_to_scene = true
resource_name = "explosion"
emission_shape = 1
emission_sphere_radius = 25.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 239 )

[sub_resource type="Curve" id=242]
max_value = 3.0
_data = [ Vector2( 0, 3 ), 0.0, -6.06097, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=243]
curve = SubResource( 242 )

[sub_resource type="ParticlesMaterial" id=245]
resource_local_to_scene = true
resource_name = "remains_single"
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
damping = 7.69
anim_speed = 1.0
anim_speed_curve = SubResource( 243 )

[node name="LaserLine" type="KinematicBody2D" groups=["Enemies"]]
collision_layer = 0
collision_mask = 0
script = ExtResource( 10 )

[node name="animatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 2, 0 )
z_index = 32
frames = ExtResource( 12 )
playing = true
script = ExtResource( 16 )
line_frames = [ ExtResource( 17 ), ExtResource( 5 ), ExtResource( 18 ) ]

[node name="ray" type="RayCast2D" parent="animatedSprite"]
position = Vector2( 8, 0 )
enabled = true
cast_to = Vector2( 400, 0 )
collision_mask = 577

[node name="collision" type="AnimatedSprite" parent="animatedSprite"]
position = Vector2( 32, 0 )
z_index = -1
frames = ExtResource( 15 )
animation = "end"
frame = 2

[node name="line" type="Line2D" parent="animatedSprite"]
z_index = -2
points = PoolVector2Array( 0, 0, 32, 0 )
width = 16.0
default_color = Color( 1, 1, 1, 1 )
texture = ExtResource( 5 )
texture_mode = 2

[node name="collisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 1.5, 0 )
shape = SubResource( 79 )

[node name="visibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
visible = false
position = Vector2( -1.52588e-05, -2.66667 )
scale = Vector2( 200.5, 2.66667 )
rect = Rect2( -2, -2, 4, 6 )

[node name="area2D" type="Area2D" parent="."]
scale = Vector2( 32, 1 )
collision_layer = 0
collision_mask = 6
input_pickable = false

[node name="collisionShape2D" type="CollisionShape2D" parent="area2D"]
position = Vector2( 0.5, 0 )
shape = SubResource( 80 )

[node name="DamageOnTouch" type="Node2D" parent="."]
script = ExtResource( 9 )
damage = 3.0

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 7 )
active = false
max_freeze_hits = 1

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 13 )
volume_db = -6.832
max_distance = 1200.0
attenuation = 1e-05
bus = "SFX"

[node name="Laser" type="Node2D" parent="."]
script = ExtResource( 6 )

[node name="EnemyDeath" type="Node2D" parent="."]
script = ExtResource( 8 )
active = false
debug_logs = true
explosion_duration = 0.0

[node name="Explosion Particles" parent="EnemyDeath" instance=ExtResource( 2 )]
process_material = SubResource( 244 )

[node name="Remains" parent="EnemyDeath" instance=ExtResource( 3 )]
process_material = SubResource( 245 )

[node name="remains_particles" parent="EnemyDeath/Remains" index="0"]
amount = 4

[node name="audioStreamPlayer2D" type="AudioStreamPlayer2D" parent="EnemyDeath"]
stream = ExtResource( 4 )
volume_db = -4.267
max_distance = 600.0
attenuation = 0.951366
bus = "SFX"

[editable path="EnemyDeath/Remains"]
